[project]
name = "iamccs-wan-lora-fixer-stack"
version = "1.3.2"
description = "IAMCCS multi-LoRA stack & MODEL IO WAN remap + LTX-2 LoRA/tools nodes (FrameRate Sync, Validator, Control Preprocess, LTX-2 LoRA stacks)."
license = { text = "MIT" }
authors = [
  { name = "Carmine Cristallo Scalzi (IAMCCS)", email = "info@carminecristalloscalzi.com" }
]

[tool.comfy]
publisher_id = "iamccs"
display_name = "IAMCCS WAN LoRA Fixer Stack"
icon = "icon.png"
requires_comfyui = ">=3.0.0"
